--- a/pollster/templates/base.html
+++ b/pollster/templates/base.html
@@ -8,21 +8,9 @@
   <link rel="stylesheet" href="https://bootswatch.com/4/pulse/bootstrap.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">Pollster</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link active" href="{% url 'polls:index' %}">Home <span class="sr-only">(current)</span></a>
-          </li>
-        </ul>
-      </div>
-  </nav>
-  <div class="container">
+  <!-- Navbar -->
+  {% include 'partials/_navbar.html' %}
+  <div class="container mt-3">
     <div class="row">
       <div class="col-md-6 m-auto mb-3">
         {% block content %} {% endblock %}
